--- a/src/components/Expense/Expense.module.scss
+++ b/src/components/Expense/Expense.module.scss
@@ -1,4 +1,26 @@
 .container {
   display: flex;
-  background-color: gray;
+  position: relative;
+  column-gap: 1rem;
+  box-shadow:
+    rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border-radius: 5px;
+  padding: 1rem;
+
+  .delete {
+    display: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    right: 1rem;
+  }
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+
+    .delete {
+      display: initial;
+    }
+  }
 }
