--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -1,16 +1,66 @@
 @import "@/styles/main";
 
-.input {
-  background-color: $color_white;
-  padding: $spacing-s;
-  border-radius: $border-radius_small;
-  border: none;
-  box-shadow: $shadow_float-low;
-  outline: none;
-  transition: box-shadow $transition-default;
-  color: $text_regular;
+.container {
+  position: relative;
+  width: 100%;
 
-  &:focus {
+  .input {
+    position: relative;
+    z-index: 2;
+    background-color: $color_white;
+    padding: $spacing-s-m $spacing-m;
+    border-radius: $border-radius_small;
+    border: none;
     box-shadow: $shadow_float-sticky;
+    outline: none;
+    transition: box-shadow $transition-default;
+    color: $text_regular;
+    width: 100%;
+
+    // &:focus {
+    //   box-shadow: $shadow_float-sticky;
+    // }
+  }
+
+  &::after {
+    position: absolute;
+    z-index: 1;
+    content: "";
+    height: 100%;
+    width: 100%;
+    left: -1px;
+    top: -1px;
+    border-radius: $border-radius_small;
+    box-sizing: content-box;
+    background: transparent;
+    transform: rotateY(180deg);
+    padding: 1px;
+  }
+
+  &.loading {
+    &::after {
+      background: conic-gradient(
+        from var(--rotation),
+        $color_primary 0%,
+        $color_primary_light 30%
+      );
+      animation: spin 2s linear infinite reverse;
+    }
+  }
+}
+
+@property --rotation {
+  syntax: "<angle>";
+  inherits: false;
+  initial-value: 20deg;
+}
+
+@keyframes spin {
+  from {
+    --rotation: 20deg;
+  }
+
+  to {
+    --rotation: 380deg;
   }
 }
