--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,6 @@
 @import "@/styles/main";
 
 .button {
-  background-color: #ffffff;
   border: 0;
   border-radius: 0.5rem;
   box-sizing: border-box;
@@ -36,5 +35,15 @@
   &:disabled {
     box-shadow: $shadow_float-sticky;
     background-color: rgb(233, 233, 233);
+  }
+
+  &.primary {
+    // #TODO
+    background-color: #ffffff;
+  }
+
+  &.secondary {
+    // #TODO
+    background-color: #ccc;
   }
 }
