--- a/src/components/Expense/Expense.module.scss
+++ b/src/components/Expense/Expense.module.scss
@@ -2,27 +2,38 @@
 
 .container {
   display: flex;
-  position: relative;
-  column-gap: 1rem;
+  flex-direction: column;
   box-shadow:
     rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
   border-radius: $border-radius_small;
-  padding: $spacing-m;
+  overflow: hidden;
 
-  .delete {
-    display: none;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    right: $spacing-m;
+  .summary {
+    padding: $spacing-m;
+    display: flex;
+    position: relative;
+    column-gap: 1rem;
+
+    .delete {
+      display: none;
+      padding: 0;
+      margin: 0;
+      position: absolute;
+      right: $spacing-m;
+    }
+  }
+
+  .details {
+    padding: $spacing-m;
   }
 
   &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-
-    .delete {
-      display: initial;
+    .summary {
+      background-color: rgba(0, 0, 0, 0.1);
+      .delete {
+        display: initial;
+      }
     }
   }
 }
